# cmake-library

./: .gitignore  LICENSE  README.md
.github/workflows/: cmake.yml
doc/: diagram.graphml
library2/: CMakeLists.txt
library2/cmake/: library2Config.cmake.in
library2/lib/: CMakeLists.txt
library2/lib/include/library2/: lib.h  version.h.in
library2/lib/include/library2/subfolder/: helper.h
library2/lib/src/: lib.cpp
library3/: CMakeLists.txt
library3/cmake/: library3Config.cmake.in
library3/lib/: CMakeLists.txt
library3/lib/include/library3/: lib.h
library3/lib/include/library3/subfolder/: helper.h
library3/lib/src/: lib.cpp
library3/tests/: test1.cpp
library4/: CMakeLists.txt
library4/cmake/: library4Config.cmake.in
library4/lib/: CMakeLists.txt
library4/lib/include/library4/: lib.h
library4/lib/include/library4/subfolder/: helper.h
library4/lib/src/: lib.cpp
